declared variables, added timer

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <div id="question-box">
             <div id="question"></div>
             <div id="answer-button" class="btn-list">
+                <div id="A" class="answer-btn"></div>
+                <div id="B" class="answer-btn"></div>
+                <div id="C" class="answer-btn"></div>
+                <div id="D" class="answer-btn"></div>
             </div>
         </div>
     </section>    
