answer choices display, score updates w/ correct answer, time updates w/ incorrect answer

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div id="question-box">
             <div id="question"></div>
             <div id="answer-button" class="btn-list">
-                <div id="A" class="answer-btn"></div>
-                <div id="B" class="answer-btn"></div>
-                <div id="C" class="answer-btn"></div>
-                <div id="D" class="answer-btn"></div>
+                <div id="A" class="option btn" onclick="checkAnswer('A')" ></div>
+                <div id="B" class="option btn" onclick="checkAnswer('B')"></div>
+                <div id="C" class="option btn" onclick="checkAnswer('C')"></div>
+                <div id="D" class="option btn" onclick="checkAnswer('D')"></div>
             </div>
         </div>
     </section>    
