added local storage, display highscores, have not figured out how to sort them

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <section id="container" class="hidden">    
-        <div id="question-box">
+        <div id="question-box" class="hidden">
             <div id="question"></div>
             <div id="answer-button" class="btn-list">
                 <div id="A" class="option btn" onclick="checkAnswer('A')" ></div>
@@ -38,5 +38,17 @@
         </div>    
         <p><span>Instructions: Answer as many questions as you can in 60 seconds, 5 seconds will be deducted for incorrect answers. Good Luck!</span></p>
     </footer> 
+    <div id="leaderboard" class="container hidden">
+        <li id="hs-initials"></li>
+        <li id="hs-initials"></li>
+        <li id="hs-initials"></li>
+        <li id="hs-initials"></li>
+        <li id="hs-initials"></li>
+        <li id="hs-initials"></li>
+        <li id="hs-initials"></li>
+        <li id="hs-initials"></li>
+        <li id="hs-initials"></li>
+        <li id="hs-initials"></li>
+    </div> 
 </body>
 </html>
